# Zoe

./: .kdbgrc.zoe  README.md
src/: CMakeLists.txt  CellAction.h  cell.cpp  cell.h  cellaction.cpp  cellaction.h  chromosome.h  environment.cpp  environment.h  environmnet.cpp  gene.cpp  gene.h  icell.cpp  icell.h  livingarea.cpp  livingarea.h  main.cpp  mainwindow.cpp  mainwindow.h  paintwidget.cpp  paintwidget.h  photoautotroph.cpp  photoautotroph.h  zoedata.h  zoeui.rc
